| Summary: | ASTERISK-23858: 'core show hints' - presence state display is wrong, plus column missing from 'core show hint' | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2014-06-11 12:43:47 | Date Closed: | 2014-06-11 15:24:28 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | PBX/General |
| Versions: | SVN | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | SVN-trunk-r415698 | Attachments: | |
| Description: | I was reviewing the addition in https://reviewboard.asterisk.org/r/3604/
The new 'presence' column is missing from 'core show hint' {noformat} *CLI> core show hint 6002 6002@from-internal : PJSIP/6002,CustomPre State:Idle Watchers 0 1 hint matching extension 6002 {noformat} compared to: {noformat} *CLI> core show hints -= Registered Asterisk Dial Plan Hints =- 6002@from-internal : PJSIP/6002,CustomPre State:Idle Presence:Busy Watchers 0 {noformat} Additionally the above presence state shows 'Busy' , when the actual presence state is 'available'. {noformat} *CLI> presencestate list --------------------------------------------------------------------- --- Custom Presence States ------------------------------------------ --------------------------------------------------------------------- --- --- Name: 'CustomPresence:Alice' --- State: 'available' --- Subtype: '' --- Message: '' --- Base64 Encoded: 'No' --- {noformat} The presence column will reflect 'InUse' when I change the presence state to 'unavailable'. | ||
| Comments: | By: Malcolm Davenport (mdavenport) 2014-06-11 13:49:33.872-0500 [~sgriepentrog]'s https://reviewboard.asterisk.org/r/3611/ worked for me. By: Rusty Newton (rnewton) 2014-06-11 15:07:22.503-0500 Tested, works for me as well. Comments on https://reviewboard.asterisk.org/r/3611/ | ||